# B_ITensor

./: -----it_dmrg.cc  ---it_dmrg.cc  --it_dmrg.cc  -it_dmrg.cc  -it_dmrg_tri_rhom_36.cc  CMakeLists.txt  FROMTHISDIR_CMakeLists.txt  IT_DMRG_test.kdev4  SEPARATE_CMakeLists.txt  andrej_dmrg.cc  it_dmrg-.cc  it_dmrg.cc  it_dmrg24.cc  it_dmrg32.cc  it_dmrg32dmrgJ.cc  it_dmrg32dmrgU.cc  it_dmrg32eigval.cc  it_dmrg32eigvalMs.cc  it_dmrg32load.cc  it_dmrg32norm.cc  it_dmrg8writeU.cc  it_dmrg_tri_hex_28.cc  it_dmrg_tri_rhom_12.cc  it_dmrg_tri_rhom_12_HUBBARD.cc  it_dmrg_tri_rhom_12_eigenval.cc  it_dmrg_tri_rhom_12_eigenval_HUBBARD.cc  it_dmrg_tri_rhom_12_load.cc  it_dmrg_tri_rhom_12_load_HUBBARD.cc  it_dmrg_tri_rhom_12_loadfromother.cc  it_dmrg_tri_rhom_12_loadfromother_HUBBARD.cc  it_dmrg_tri_rhom_16_HUBBARD.cc  it_dmrg_tri_rhom_16_eigenval.cc  it_dmrg_tri_rhom_16_eigenval_HUBBARD.cc  it_dmrg_tri_rhom_16_load.cc  it_dmrg_tri_rhom_16_load_HUBBARD.cc  it_dmrg_tri_rhom_24_HUBBARD.cc  it_dmrg_tri_rhom_24_eigenval_HUBBARD.cc  it_dmrg_tri_rhom_36.cc  it_dmrg_tri_rhom_36_HUBBARD.cc  it_dmrg_tri_rhom_36_eigenval.cc  (+5 more)
--itensor/: DMRGObserver.h  allocator.h  bondgate.h  combiner.h  condenser.cc  condenser.h  counter.h  dmrg.h  eigensolver.h  global.h  hambuilder.h  index.cc  index.h  indexset.h  integrators.h  iqcombiner.cc  iqcombiner.h  iqindex.cc  iqindex.h  iqtdat.h  iqtensor.cc  iqtensor.h  iqtsparse.cc  iqtsparse.h  itensor.cc  itensor.h  itsparse.cc  itsparse.h  localmpo.h  localmpo_mps.h  localmposet.h  localop.h  model.h  mpo.cc  mpo.h  mps.cc  mps.h  namespace.cc  namespace.h  observer.h  (+14 more)
--itensor/hams/: 2dmrg.pbs  CMakeLists.txt  tJChain.h  tJham.h
--itensor/model/: hubbard.h  hubbardmod.h
--matrix/: CMakeLists.txt  bigmatrix.h  bigtimeit.cc  conjugate_gradient.cc  conjugate_gradient.h  david.cc  davidson.h  dgemm.cc  lapack_wrap.h  matrix.cc  matrix.h  matrixref.cc  matrixref.h  precisio.h  sparse.cc  sparse.h  sparseref.cc  sparseref.h  storelink.cc  storelink.h  svd.cc  svd.h  testmat.cc  utility.cc
.kdev4/: IT_DMRG.kdev4  IT_DMRG_test.kdev4
ORIGINALsource/: CURRENT_it_dmrg.cc  it_dmrg.cc.read_from_file_continue_dmrg  it_dmrg.cc.read_from_file_continue_dmrg_32_site_new_ham_hubbard  it_dmrg.cc.read_from_file_continue_dmrg_32_site_new_ham_tj  it_dmrg.cc.read_from_file_measure_C6_eigval_hubbard  it_dmrg.cc.read_from_file_measure_C6_eigval_tj  it_dmrg.cc.read_from_file_measure_inv_eigval_tj  it_dmrg.cc.read_from_file_measure_sector_C6_eigval_hubbard  it_dmrg.cc.read_from_file_measure_sector_C6_eigval_tj  it_dmrg.cc.read_from_file_measure_sector_inv_eigval_tj  it_dmrg.cc.read_from_file_measure_sym_eigval  it_dmrg.cc.read_from_file_test_C6_120deg_hubbard  it_dmrg.cc.read_from_file_test_C6_120deg_tj  it_dmrg.cc.read_from_file_test_C6_60deg_hubbard  it_dmrg.cc.read_from_file_test_C6_60deg_tj  it_dmrg.cc.test_symMonteCarlo  it_dmrg.cc.write_to_file_at_end_of_calc_test_doWrite_hubbard  it_dmrg.cc.write_to_file_at_end_of_calc_test_doWrite_tj  it_dmrg.cc.write_to_file_during_calc  it_dmrg.cc.write_to_file_during_calc_32_site_hubbard  it_dmrg.cc.write_to_file_during_calc_32_site_hubbard_random_init  it_dmrg.cc.write_to_file_during_calc_32_site_tj_random_init  it_dmrg.ccCURRENT  it_dmrg.ccMOSTCURRENT
itensor/: .dmrg.h.kate-swp  CMakeLists.txt  DMRGObserver.h  dmrg.h  global.h  model.h  mps.cc
itensor/hams/: ExtendedHubbardham.h  ExtendedHubbardham.h.save.1
itensor/model/: tjmod.h
matrix/: __ev_lapack_wrap.h  ev_lapack_wrap.h  non_sym_not_fixed_ev_lapack_wrap.h
sandbox/: CMakeLists.txt  dmrg_tutorial.cc
sym_MonteCarlo/: it_dmrg32dmrgU.cc  measurement.cc  symMonteCarlo.cc  symMonteCarlo.h  symUtilities.cc
tutorial/01_one_site/: one  one.cc  output  peps.pbs
tutorial/02_two_site/: imag_tevol  two
tutorial/03_svd/: --svd.cc  svd  svd.cc
tutorial/04_mps/: j1j2
tutorial/05_gates/: gates
tutorial/07_basicDMRG/: -basicDMRG.cc  5_5_output  Makefile  basicDMRG.cc  data_processing.nb  fitting.h  fitting_print_output  generalizedev.h  heisenberg_sl.h  main_loop_make_non_pd_to_pd.h  main_loop_skip_and_recover_sites.h  main_loop_skip_and_recover_sites_energy_sensitive.h  main_loop_stop_when_not_pd.h  main_loop_use_general_min.h  main_loop_use_general_min_nearest.h  main_loop_use_inverse_matrix.h  output  parameters.h  peps.pbs  spin_spin_correlation_sl.h  sweep_utility.h  tensor_sweep.h  tensor_utility.h  tensors.h
tutorial/07_basicDMRG/multi/: output  peps.pbs
utilities/: CMakeLists.txt  array2.cc  array2.h
(+438 files in other folders)
